--- a/static/base.css
+++ b/static/base.css
@@ -11,7 +11,14 @@
 }
 
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-nav li a:hover {
-    color: #E1B735;
+    color: #8A569A;
+}
+
+.navbar-brand,
+.navbar-nav li a {
+    line-height: 75px;
+    height: 75px;
+    padding-top: 0;
 }
 
 /*Login*/
@@ -32,6 +39,13 @@
 #login-dp .social-buttons{
     margin:12px 0    
 }
+
+#brand {
+    max-height: 100%;
+    background:transparent;
+    vertical-align: middle;
+}
+
 
 /*nav {
     font-family: 'Roboto', sans-serif;
