--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
 
 <!-- Bootsrap Min CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
 
 <!-- jQuery -->
 <script src="http://code.jquery.com/jquery.js"></script>
@@ -34,7 +36,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button> -->
-      <a class="navbar-brand" href="/">Carseat</a>
+      <a class="navbar-brand" href="/"><img id="brand"src="static/Carseat_White.png"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
