--- a/templates/search.html
+++ b/templates/search.html
@@ -41,17 +41,19 @@
     - Removing all address data to re-search doesn't work<br>
     - Only 43 rides are showing, you can view all ones returned in terminal<br>
   </div> -->
-
-  <div class="row">
-    <div class="well" id="top-well">
+  <br>
+  <div class="row" id="re-search">
+    <div class="col-xs-12">
+    
     <form action="/search" id="searchform">
         <div class="row form-inline">
-          <fieldset>
-            <div class="col-md-12">
-              <label for="start-address">Enter Your Destination</label>
-            </div>
+
 {% if start_search is defined %}
-            <div class="form-group">
+            <div class="input-group">
+              <div class="input-group-addon">
+                <span class="glyphicon start glyphicon-unchecked"></span>
+              </div> 
+              <span class="input-group-addon"><span class="glyphicon glyphicon-star"></span></span> 
               <input type="text" class="form-control" id="autocomplete" name="start-address"
               aria-describedby="starting destination" onFocus="geolocate()" value="{{ start_search['term'] }}">
               <input type="hidden" id="searchstring" name="searchstring" value="{{ start_search['term'] }}">
@@ -62,11 +64,15 @@
               <input type="hidden" id="lng" name="lng" value="{{ start_search['lng'] }}">      
             </div>
 
-            <div class="form-group">
+            <div class="input-group">
               <span class="glyphicon glyphicon-transfer" id="reverse" aria-hidden="true"></span>
             </div>
 
-            <div class="form-group">
+            <div class="input-group">
+              <div class="input-group-addon">
+                <span class="glyphicon end glyphicon-unchecked"></span>
+              </div> 
+              <span class="input-group-addon glyphicon glyphicon-star"></span>  
               <input aria-label type="text" class="form-control" id="autocomplete2" name="end-address"
               aria-describedby="ending destination" onFocus="geolocate()" value="{{ end_search['term'] }}"> 
               <input type="hidden" id="searchstring2" name="searchstring2" value="{{ end_search['term'] }}">
@@ -77,7 +83,10 @@
               <input type="hidden" id="lng2" name="lng2" value="{{ end_search['lng'] }}">
             </div>
 {% else %}
-          <div class="form-group">
+          <div class="input-group">
+            <div class="input-group-addon">
+              <span class="glyphicon start glyphicon-unchecked"></span>
+            </div> 
             <input type="text" class="form-control" id="autocomplete" name="start-address"
               aria-describedby="starting destination" onFocus="geolocate()" placeholder="Enter Starting Location">
             <input type="hidden" id="searchstring" name="searchstring" value="">
@@ -94,7 +103,10 @@
             <span class="glyphicon glyphicon-transfer" id="reverse" aria-hidden="true"></span>
           </div>
 
-          <div class="form-group">
+          <div class="input-group">
+            <div class="input-group-addon">
+              <span class="glyphicon end glyphicon-unchecked"></span>
+            </div> 
             <input aria-label type="text" class="form-control" id="autocomplete2" name="end-address"
             aria-describedby="ending destination" onFocus="geolocate()" placeholder="Enter Ending Location">
             <input type="hidden" id="searchstring2" name="searchstring2" value="">
@@ -108,17 +120,17 @@
 
     <!-- submit button -->
         <button type="submit" class="btn btn-primary" style="display:none">Submit</button>
-      </fieldset>
+
     </div>
   </form>
-
 </div>
-  </div>
+</div>
+
   <br>
 
   <div class="row">
     <div class="col-xs-3">
-      <div class="well" id="side-well" style="height:100%;">
+      <div class="well" id="side-well">
 
       <div class="row toggle-header">Depature</div>
 
@@ -139,7 +151,7 @@
       </div> -->
 
       <div class="row toggle-label">
-        From <input type="text" id="from" name="from" required>
+        From <input type="text" id="from" name="from" placeholder="mm/dd/yyy" required>
       </div>
 
 <!--       <div class="row toggle-label">
@@ -147,7 +159,7 @@
       </div>
  -->
       <div class="row toggle-label">
-        To <input type="text" id="to" name="to">
+        To <input type="text" id="to" name="to" placeholder="mm/dd/yyy">
         <input id="current-offset" type="hidden" value="0">
         <input id="max-offset" type="hidden" value="{{ page_count - 1 }}">
         <input id="active-page" type="hidden" value="1">
@@ -175,7 +187,7 @@
     </div>
     </div>
 
-    <div class="col-xs-9">
+    <div class="col-xs-8">
 
         <div class="row">
           <div class="col-xs-6">
@@ -229,7 +241,7 @@
 
             <tr> 
 <!-- Left Hand Box -->
-              <td class="col-xs-2" style="padding-right:20px; border-right: 1px solid #ccc;">
+              <td class="col-xs-2" id="left-data">
                 <div class="row">
                   <img class="img-responsive" src="{{ ride.user.image }}" alt="driver image" width="100" height="100">
                 </div>
@@ -242,7 +254,7 @@
                   <div>
                     <form action="/request-seats" method="POST">
                       <div class="input-group">
-                        <select class="form-control" name='seats' style="width:auto;">
+                        <select class="form-control" id="seats" name='seats'>
 {% for i in range(ride.seats) %}
                           <option value="{{ i+1 }}">{{ i+1 }}</option>
 {% endfor %}
@@ -259,7 +271,7 @@
               </td>
 
 <!-- Middle Box -->
-              <td class="col-xs-8" style="padding-right:20px; padding-left:20px; border-right: 1px solid #ccc;">
+              <td class="col-xs-8" id="middle-data">
                 <div class="row ride" data-startlat="{{ ride.start_lat }}" data-startlng="{{ ride.start_lng }}" data-endlat="{{ ride.end_lat }}" data-endlng="{{ ride.end_lng }}">
                   <div class="departure-date light-gray">{{ ride.start_timestamp }}</div>
                 </div>
@@ -273,7 +285,8 @@
 
               <div class="row">
                 <div class="specific-address">
-                  <span class="glyphicon glyphicon-unchecked" style="color:green"></span>
+                  <span class="glyphicon start glyphicon-unchecked"></span>
+                  <span class="pickup-dropoff">Pick-up: </span>
                   <span>
 {% if ride.start_name is not none %}
 
@@ -308,7 +321,8 @@
 
               <div class="row">
                 <div class="specific-address">
-                  <span class="glyphicon glyphicon-unchecked" style="color:red"></span>
+                  <span class="glyphicon end glyphicon-unchecked"></span>
+                  <span class="pickup-dropoff">Drop-off: </span>
                   <span>
 {% if ride.end_name is not none %}
 
@@ -344,10 +358,8 @@
               <br>
 
 {% if ride.mileage and ride.duration is not none %}
-              <div class="row">
                 <span class="glyphicon glyphicon-time"></span>
                 <span>{{ ride.mileage }}, Est Travel Time: {{ ride.duration }}</span>
-              </div>
 {% endif %}
 
               <div class="row">
@@ -358,7 +370,7 @@
           </td>
 
 <!-- Right Hand Box -->
-          <td class="col-xs-2" style="padding-left:20px;">
+          <td class="col-xs-2" id="right-data">
             <div class="row">
               <span class="price">${{ ride.cost }}</span>
               <span class="per-passenger">per passenger</span>
@@ -371,7 +383,7 @@
             <br><br><br>
 
            <!--  Luggage, Detours -->
-            <div class="row">
+            <div class="row pull-right">
               <!-- luggage -->
               <a class="my-tool-tip" data-toggle="tooltip" data-placement="left" title="You are allowd to bring 1 {{ ride.luggage }} suitcase">
                 <i class="icon-briefcase icon-large col-xs-4"></i>
@@ -400,6 +412,7 @@
 {% endif %}
             </div>  
         </td>
+
       </tr>
 
 {% endfor %}
