--- a/static/base.css
+++ b/static/base.css
@@ -5,7 +5,7 @@
     background: transparent;
     border: none;
     border-radius: 0;
-    color: black;
+    color: white;
     font-family: 'Droid Sans', sans-serif;
     font-size: 20px;
 }
@@ -14,11 +14,15 @@
     color: #8A569A;
 }
 
-.navbar-brand,
-.navbar-nav li a {
+
+.navbar-brand {
     line-height: 75px;
     height: 75px;
-    padding-top: 0;
+    padding-top: 8px;
+}
+
+.navbar-nav li a {
+    line-height: 45px;
 }
 
 /*Login*/
