--- a/static/home.css
+++ b/static/home.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-  background-image: url(road.jpg);
+  background-image: url(road.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -21,11 +21,40 @@ h1.main-title{
   font-size:60px;
   position: center;
   text-align: center;
-  top: 75px;
-  right: 25px;
 }
 
-.main-search {
+#search {
+  -webkit-box-align:center;
+  -webkit-box-pack:center;
+  display:-webkit-box;
+  margin-left: 100px
+}
+
+
+#autocomplete, #autocomplete2{
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.btn-custom {
+  border-radius: 4px !important;
+  background-color: hsl(131, 72%, 41%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#22d643", endColorstr="#1db338");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#22d643), to(#1db338));
+  background-image: -moz-linear-gradient(top, #22d643, #1db338);
+  background-image: -ms-linear-gradient(top, #22d643, #1db338);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #22d643), color-stop(100%, #1db338));
+  background-image: -webkit-linear-gradient(top, #22d643, #1db338);
+  background-image: -o-linear-gradient(top, #22d643, #1db338);
+  background-image: linear-gradient(#22d643, #1db338);
+  border-color: #1db338 #1db338 hsl(131, 72%, 39%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.13);
+  -webkit-font-smoothing: antialiased;
+}
+
+/*.main-search {
   color: #fff;
   font-family: 'Droid Serif', serif;
   font-size:20px;
@@ -33,6 +62,13 @@ h1.main-title{
   text-align: center;
   top: 75px;
   right: 25px;
+}*/
+
+span.glyphicon.start.glyphicon-unchecked{
+    color: green;
+}
+span.glyphicon.end.glyphicon-unchecked:before {
+    color: red;
 }
 
 .hidden {
@@ -45,7 +81,7 @@ h1.main-title{
   width: 100%;
 }
 
-.main-search {
+/*.main-search {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -54,7 +90,7 @@ h1.main-title{
   height: auto;
   padding: 20px;  
   color: white; 
-}
+}*/
 
 .form { 
   display: block;
