--- a/templates/rideform.html
+++ b/templates/rideform.html
@@ -19,6 +19,11 @@
 
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBm2Vj5UTzzCPn_6ZYRQxOT55U3PtKXgQ&libraries=places" async defer></script> -->
 
+<link rel="stylesheet" rel="text/css" href="static/navbar.css">
+<link rel="stylesheet" rel="text/css" href="static/rideform.css">
+
+
+
 {% endblock %}
 
 
