--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button> -->
-      <a class="navbar-brand" href="/"><img id="brand"src="static/Carseat_White.png"></a>
+      <a class="navbar-brand" href="/"><img id="brand"src="/static/Carseat_White.png"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
