--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css?family=Droid+Serif:700|Droid+Sans:400,700|Open+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
 
-<script type="text/javascript" src="static/facebook_login.js"></script>
-<link rel="stylesheet" rel="text/css" href="static/base.css">
+<script type="text/javascript" src="/static/facebook_login.js"></script>
+<link rel="stylesheet" rel="text/css" href="/static/base.css">
 
 <title>{% block title %} Title {% endblock %}</title>
 {% block head %} {% endblock %}
