Adjusted search radius, changed icons so there is no underline on hover

--- a/static/search.css
+++ b/static/search.css
@@ -16,6 +16,12 @@ span.glyphicon.glyphicon-transfer {
     font-size: 1.2em;
 }
 
+i:before {
+    text-decoration: none !important;
+}
+
+
+
 
 /*.container {
     width: 80%;
