--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="input-group">
                         <span class="input-group-btn">
-                            <button class="btn btn-custom" type="button">Go!</button>
+                            <button class="btn btn-custom" type="submit">Go!</button>
                         </span>
                     </div>
                 </div>
