--- a/templates/search.html
+++ b/templates/search.html
@@ -417,6 +417,7 @@
       <tr>
         <td>
           <p>No upcoming rides for that search</p>
+          <button type="button" class="btn all-rides"><a id="view-all-rides" href="/search?query=all">View All Rides</a></button>
         </td>
       </tr>
 
