Adjusted for international inputs

--- a/templates/search.html
+++ b/templates/search.html
@@ -126,7 +126,7 @@
     <div class="col-xs-3">
       <div class="well" id="side-well">
 
-      <div class="row toggle-header">Depature</div>
+      <div class="row toggle-header">Departure</div>
 
       <br>
 
