--- a/static/home.css
+++ b/static/home.css
@@ -17,7 +17,7 @@ body {
 
 h1.main-title{
   color: #fff;
-  font-family: 'Droid Serif', serif;
+  font-family: 'Droid Sans', serif;
   font-size:60px;
   position: center;
   text-align: center;
