--- a/static/home.css
+++ b/static/home.css
@@ -19,6 +19,7 @@ h1.main-title{
   color: #fff;
   font-family: 'Droid Sans', serif;
   font-size:60px;
+  font-weight: bolder;
   position: center;
   text-align: center;
 }
@@ -27,7 +28,7 @@ h1.main-title{
   -webkit-box-align:center;
   -webkit-box-pack:center;
   display:-webkit-box;
-  margin-left: 100px
+  /*margin-left: 100px*/
 }
 
 
