--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 main">
-            <h1 class="main-title">Find your Seat</h1>
+            <h1 class="main-title">Find your seat.</h1>
         </div>
     </div>
 
